    * FIX: LDAP: OpenLDAP - Changed default filter for users
    * LDAP: Role sync plugin validates the given group DNs with the group base dn now
    * LDAP: Using roles defined in default user profile in role sync plugin processing
    * LDAP: Improved error handling in case of misconfigurations
    * LDAP: Reduced number of ldap querys during a single page request / sync process

1.2.1i4:
    Core:
    * Better exception handling when executing "Check_MK"-Check. Printing python
      exception to status output and traceback to long output now.
    * Added HOSTTAGS to notification macros which contains all Check_MK-Tags
      separated by spaces
    * Output better error message in case of old inventory function
    * Do object cache precompile for monitoring core on cmk -R/-O
    * Avoid duplicate verification of monitoring config on cmk -R/-O
    * FIX: Parameter --cleanup-autochecks (long for -u) works now like suggested in help
    * FIX: Added error handling when trying to --restore with a non existant file

    Notifications:
    * Fix flexible notifications on non-OMD systems
    
    Checks & Agents:
    * Linux Agent, mk_postgres: Supporting pgsql and postgres as user
    * Linux Agent, mk_postgres: Fixed database stats query to be compatible
      with more versions of postgres
    * apache_status: Modified to be usable on python < 2.6 (eg RHEL 5.x)
    * apache_status: Fixed handling of PIDs with more than 4 numbers
    * Add: New Check for Rittal CMC PSM-M devices
    * Smart plugin: Only use relevant numbers of serial
    * Add: ibm_xraid_pdisks - new check for agentless monitoring of disks on IBM SystemX servers.
    * Add: hp_proliant_da_cntlr check for disk controllers in HP Proliant servers
    * Add: Check to monitor Storage System Drive Box Groups attached to HP servers
    * Add: check to monitor the summary status of HP EML tape libraries
    * Add: apc_rackpdu_status - monitor the power consumption on APC rack PDUs